--- a/.gitattributes
+++ b/.gitattributes
@@ -1,6 +1,5 @@
 # Auto detect text files and perform LF normalization
 * text=auto
-
 # Specific settings for file types
 *.cs text eol=crlf
 *.unity text eol=crlf
@@ -11,7 +10,6 @@
 *.txt text eol=crlf
 *.xml text eol=crlf
 *.md text eol=crlf
-
 # Binary files - do not convert CRLF
 *.png binary
 *.jpg binary
@@ -24,3 +22,4 @@
 *.mp3 binary
 *.flac binary
 *.wav binary
+*.apk filter=lfs diff=lfs merge=lfs -text
